--- a/comp281-2025-assignment1-6712231021/index.html
+++ b/comp281-2025-assignment1-6712231021/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<h3>COMP281 Assignment 1 : Canvas</h3>
-	<h3>6712231021 นาย ภวินท์ พันทอง กลุ่ม1</h4>
+	<h3>6712231002 นางสาว นิตยา แกล้วกล้า กลุ่ม1</h4>
 	<canvas id="myCanvas"></canvas>
 </body>
 </html>
